| Summary: | ASTERISK-28788: func_aes: incorrectly printing error 'declined to load' | ||||
| Reporter: | Alexander Traud (traud) | Labels: | |||
| Date Opened: | 2020-03-23 10:51:20 | Date Closed: | 2020-03-31 11:49:16 | ||
| Priority: | Minor | Regression? | |||
| Status: | Closed/Complete | Components: | Functions/func_aes | ||
| Versions: | 16.9.0 17.3.0 | Frequency of Occurrence | |||
| Related Issues: |
| ||||
| Environment: | no OpenSSL (development) headers either disabled or not found, in script ./configure | Attachments: | |||
| Description: | {code}
ERROR: loader.c:2396 load_modules: Failed to resolve dependencies for func_aes ERROR: loader.c:2396 load_modules: func_aes declined to load. {code} At compile time, see {{MODULEINFO}}, OpenSSL {{-lcrypto}} is optional. At runtime, see {{AST_MODULE_INFO}}, OpenSSL {{libcrypto.so}} is mandatory. This mismatch happened because of the changes [9cfdb81|https://gerrit.asterisk.org/7872] and [606ae34|https://gerrit.asterisk.org/6964] back in the year 2017. However, the error message itself is just cosmetic, those functions cannot be used anyway. | ||||
| Comments: | By: Asterisk Team (asteriskteam) 2020-03-23 10:51:21.485-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. By: Friendly Automation (friendly-automation) 2020-03-31 11:49:17.007-0500 Change 14011 merged by Friendly Automation: func_aes: Avoid incorrect error message on load. [https://gerrit.asterisk.org/c/asterisk/+/14011|https://gerrit.asterisk.org/c/asterisk/+/14011] By: Friendly Automation (friendly-automation) 2020-03-31 12:00:13.267-0500 Change 14010 merged by Friendly Automation: func_aes: Avoid incorrect error message on load. [https://gerrit.asterisk.org/c/asterisk/+/14010|https://gerrit.asterisk.org/c/asterisk/+/14010] By: Friendly Automation (friendly-automation) 2020-03-31 12:08:44.876-0500 Change 13959 merged by Joshua Colp: func_aes: Avoid incorrect error message on load. [https://gerrit.asterisk.org/c/asterisk/+/13959|https://gerrit.asterisk.org/c/asterisk/+/13959] By: Friendly Automation (friendly-automation) 2020-03-31 12:09:22.914-0500 Change 14061 merged by Joshua Colp: func_aes: Avoid incorrect error message on load. [https://gerrit.asterisk.org/c/asterisk/+/14061|https://gerrit.asterisk.org/c/asterisk/+/14061] | ||||